# nix-weather

./: .gitignore  .rustfmt.toml  .versionrc  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  EDITORIAL.md  Justfile  README.md  REUSE.toml  build.rs  cliff.toml  deny.toml  flake.nix  justfile  rust-toolchain.toml  treefmt.nix
.config/: cliff.toml  hakari.toml  rust-toolchain.toml  treefmt.nix
.forgejo/workflows/: audit.yml  conventional-commits.yml  demo.yaml  flake.yml  nix-build.yml  nix-flake-check.yml  unit-tests.yml
.github/: CODEOWNERS  FUNDING.yml  dependabot.yml
.github/workflows/: audit.yml  conventional-commits.yml  flake.yml  flakehub-publish-tagged.yml  unit-tests-bsd.yml  unit-tests.yml
.reuse/: dep5
crates/common/: Cargo.toml
crates/common/src/: lib.rs  nix_conf.rs
crates/nix-weather/: Cargo.toml  build.rs
crates/nix-weather/src/: cli.rs  main.rs  net.rs  nix.rs
crates/workspace-hack/: .gitattributes  Cargo.toml  build.rs
crates/workspace-hack/src/: lib.rs
man/: .gitignore
src/: cli.rs  main.rs  net.rs  nix.rs
