# SPDX-FileCopyrightText: 2024 Christina Sørensen
#
# SPDX-License-Identifier: EUPL-1.2

[workspace]
resolver = "2"
members = ["crates/*", "crates/workspace-hack"]

[workspace.package]
description = "Guix weather, for nix!"
version = "0.0.1"
edition = "2021"
rust-version = "1.81"
license = "EUPL-1.2"
authors = ["Christina Sørensen <christina@cafkafk.com>"]
categories = ["command-line-utilities"]

[workspace.metadata.crane]
name = "nix-weather"

[workspace.dependencies]
workspace-hack = { version = "0.1", path = "./crates/workspace-hack" }
