# SPDX-FileCopyrightText: 2024 Christina Sørensen
#
# SPDX-License-Identifier: EUPL-1.2

[workspace]
resolver = "2"
members = ["crates/*", "crates/workspace-hack"]

[workspace.package]
description = "Guix weather, for nix!"
version = "0.0.3"
edition = "2021"
license = "EUPL-1.2"
authors = ["Christina Sørensen <christina@cafkafk.com>"]
categories = ["command-line-utilities"]

# Keep this on anything that isn't EOL, we'll be nice to nixpkgs as long as
# they don't literally actually unironically lock all our deps for us or go on
# EOL rustc >_>
#
# ...also if we wanna play with bench we can probably cfg gate that :p
rust-version = "1.80.1"

[workspace.metadata.crane]
name = "nix-weather"

[workspace.dependencies]
workspace-hack = { version = "0.1", path = "./crates/workspace-hack" }
