[package]
name = "nix-weather"
description = "Guix weather, for nix!"
authors = ["Christina Sørensen <christina@cafkafk.com>"]
categories = ["command-line-utilities"]
rust-version = "1.80.1"
license = "EUPL-1.2"
version.workspace = true
edition.workspace = true
publish = false
build = "build.rs"

[dependencies]
async-recursion = "1.0.5"
clap = { version = "4.5.1", features = ["cargo"] }
console-subscriber = "0.2.0"
dns-lookup = "2.0.4"
domain = { version = "0.9.3", features = ["tokio", "resolv"] }
futures = "0.3.30"
gethostname = "0.4.3"
itertools = "0.12.1"
log = "0.4.21"
openssl = { version = "0.10.63" }
pretty_env_logger = "0.5.0"
rayon = "1.9.0"
reqwest = { version = "0.11.24", features = ["blocking"] }
scraper = "0.18.1"
serde = "1.0.197"
serde_json = "1.0.114"
tokio = { version = "1.36.0", features = ["macros", "full"] }
workspace-hack = { version = "0.1", path = "../workspace-hack" }

[build-dependencies]
clap = { version = "4.5.1", features = ["cargo"] }
clap_complete = "4"
clap_mangen = "0.2.20"
gethostname = "0.4.3"
